HW: add telemetry REST
