# telemetry/repository/models.go
@@ -1,0 +1,8 @@
+package repository
+
+import "time"
+
+type TelemetryValue struct {
+	Value       float32
+	OccuranceAt time.Time
+}
